# mtg-opening-hand-analyzer

./: .gitignore  AGENTS.md  README.md  app.py  build_exe.bat  desktop_app.py  local_web_launcher.py  pyproject.toml  requirements.txt  run.bat  run_desktop.bat  setup.bat
.streamlit/: config.toml
components/clipboard_image/: index.html
components/rating_tracker/: index.html
components/title_ocr/: index.html
data/samples/: sample_cards.json  sample_deck.txt  sample_hand.txt
docs/: limitations.md  methodology.md  recognition.md
paid-platform/: .env.example  .gitignore  README.md  next-env.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
paid-platform/docs/: roadmap.md
paid-platform/src/app/: globals.css  layout.tsx  page.tsx
paid-platform/src/components/: AccountBar.tsx  AppNav.tsx  AppPreferences.tsx  AuthForm.tsx  AuthGuard.tsx  (+12 more)
paid-platform/supabase/: schema.sql
scripts/: generate_test_screenshot.py  verify_installation.py  verify_mtgo_analysis.py  verify_mtgo_screenshot.py
src/mtg_hand_analyzer/: __init__.py  analysis.py  card_cache.py  card_data.py  card_draw.py  card_ramp.py  card_recognition.py  categories.py  database.py  deck_parser.py  land_inference.py  mana.py  models.py  probability.py  screenshot_detection.py  settings.py  window_capture.py
static/: discord.html
tests/: test_card_data.py  test_card_draw.py  test_card_ramp.py  test_deck_parser.py  test_desktop_workflow.py  test_mana.py  test_probability.py  test_recognition.py  test_screenshot_detection.py  test_window_capture.py  test_workflow.py
(+32 files in other folders)
